--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 34
+    //compileSdkVersion 34
+    defaultConfig {
+        compileSdk 34
+    }
 
     defaultConfig {
         applicationId "com.lostandfondue.ronda"
@@ -22,11 +25,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    buildToolsVersion '34.0.0'
+    //buildToolsVersion '34.0.0'
     namespace 'com.lostandfondue.ronda'
+
+    buildFeatures {
+        viewBinding = true
+    }
 
 }
 
